[package]
name = "arksavefile"
version = "0.1.0"
authors = ["Bruce Armstrong <bruce@fortressofgeekdom.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
memmap = "0.7.0"
arrayref = "0.3.6"
enumset = "1.0.1"
regex = "1.3.9"
lazy_static = "1.4.0"
