[package]
name = "arksavefile"
version = "0.1.0"
authors = ["Bruce Armstrong <bruce@fortressofgeekdom.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayref = "0.3.6"
base64 = "0.13.0"
enumset = "1.0.1"
lazy_static = "1.4.0"
memmap = "0.7.0"
paste = "1.0.0"
regex = "1.3.9"
serde_json = "1.0.57"
serde = { version = "1.0.115", features = ["derive"] }
