[package]
name = "arksavefile"
description = "Parsing library for Ark: Survival Evolved save files"
version = "0.1.0"
authors = ["Bruce Armstrong <bruce@fortressofgeekdom.org>"]
edition = "2018"
repository = "https://github.com/bpa/ark-file-parser"
license-file = "LICENSE"
keywords = ["ark", "arksurvivalevolved", "game", "extract-data"]

[dependencies]
arrayref = "0.3.6"
base64 = "0.13.0"
enumset = "1.0.1"
lazy_static = "1.4.0"
memmap = "0.7.0"
paste = "1.0.0"
regex = "1.3.9"
serde_json = "1.0.57"
serde = { version = "1.0.115", features = ["derive"] }
